Updated PMS.java to remove warnings from FindBugs.