@@ -23,6 +23,7 @@ import com.sun.jna.Platform;
 import java.awt.*;
 import java.io.*;
 import java.net.BindException;
+import java.nio.charset.StandardCharsets;
 import java.text.SimpleDateFormat;
 import java.util.*;
 import java.util.Map.Entry;
@@ -126,18 +127,6 @@ public class PMS {
 	 * Pointer to a running PMS server.
 	 */
 	private static PMS instance = null;
-
-	/**
-	 * @deprecated This field is not used and will be removed in the future.
-	 */
-	@Deprecated
-	public final static SimpleDateFormat sdfDate = new SimpleDateFormat("HH:mm:ss.SSS", Locale.US);
-
-	/**
-	 * @deprecated This field is not used and will be removed in the future.
-	 */
-	@Deprecated
-	public final static SimpleDateFormat sdfHour = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss", Locale.US);
 
 	/**
 	 * Array of {@link net.pms.configuration.RendererConfiguration} that have been found by PMS.
@@ -346,7 +335,9 @@ public class PMS {
 		 * usually done by the installer
 		 */
 		File dDir = new File(configuration.getDataDir());
-		dDir.mkdirs();
+		if (!dDir.exists() && !dDir.mkdirs()) {
+			LOGGER.error("Failed to create profile folder \"{}\"", configuration.getDataDir());
+		}
 
 		dbgPack = new DbgPacker();
 		tfm = new TempFileMgr();
@@ -600,7 +591,7 @@ public class PMS {
 		}
 
 		// Disable jaudiotagger logging
-		LogManager.getLogManager().readConfiguration(new ByteArrayInputStream("org.jaudiotagger.level=OFF".getBytes()));
+		LogManager.getLogManager().readConfiguration(new ByteArrayInputStream("org.jaudiotagger.level=OFF".getBytes(StandardCharsets.US_ASCII)));
 
 		// Wrap System.err
 		System.setErr(new PrintStream(new SystemErrWrapper(), true));
@@ -1040,7 +1031,7 @@ public class PMS {
 				if (System.getProperty(NOCONSOLE) == null) {
 					System.setProperty(CONSOLE, Boolean.toString(true));
 				}
-			} 
+			}
 		} catch (Throwable t) {
 			LOGGER.error("Toolkit error: " + t.getClass().getName() + ": " + t.getMessage());
 
@@ -1250,12 +1241,16 @@ public class PMS {
 		}
 	}
 
+	/*
+	 * This method is only called for Windows OS'es, so specialized Windows charset handling is allowed
+	 */
 	private static boolean verifyPidName(String pid) throws IOException {
 		ProcessBuilder pb = new ProcessBuilder("tasklist", "/FI", "\"PID eq " + pid + "\"", "/V", "/NH", "/FO", "CSV");
 		pb.redirectErrorStream(true);
 		Process p = pb.start();
 		String line;
-		try (BufferedReader in = new BufferedReader(new InputStreamReader(p.getInputStream()))) {
+
+		try (BufferedReader in = new BufferedReader(new InputStreamReader(p.getInputStream(), "cp" + WinUtils.getOEMCP()))) {
 			try {
 				p.waitFor();
 			} catch (InterruptedException e) {
@@ -1290,7 +1285,7 @@ public class PMS {
 	private static void killProc() throws IOException {
 		ProcessBuilder pb = null;
 		String pid;
-		try (BufferedReader in = new BufferedReader(new FileReader(pidFile()))) {
+		try (BufferedReader in = new BufferedReader(new InputStreamReader(new FileInputStream(pidFile()), StandardCharsets.US_ASCII))) {
 			pid = in.readLine();
 		}
 
@@ -1328,7 +1323,7 @@ public class PMS {
 			long pid = getPID();
 			LOGGER.debug("PID: " + pid);
 			String data = String.valueOf(pid) + "\r\n";
-			out.write(data.getBytes());
+			out.write(data.getBytes(StandardCharsets.US_ASCII));
 			out.flush();
 		}
 	}
@@ -1355,21 +1350,21 @@ public class PMS {
 	}
 
 	private static Boolean headless = null;
-	
+
 	/**
 	 * Check if UMS is running in headless (console) mode, since some Linux
 	 * distros seem to not use java.awt.GraphicsEnvironment.isHeadless() properly
 	 */
-	public static boolean isHeadless() {
+	public static synchronized boolean isHeadless() {
 		if (headless == null) {
 			try {
 				JDialog d = new JDialog();
 				d.dispose();
-				headless = new Boolean(false);
+				headless = Boolean.valueOf(false);
 			} catch (NoClassDefFoundError | HeadlessException | InternalError e) {
-				headless = new Boolean(true);				
+				headless = Boolean.valueOf(true);
 			}
-		}		
+		}
 		return headless.booleanValue();
 	}
 
